# gtfs-semantic-diff

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
config/: default.toml
docs/: PORTING.md
docs/articles/: internals_1_core.md  internals_2_presentation.md
docs/design/: admin.md  architecture.md  coverage_and_nonroute.md  day_types.md  i18n.md  ontology.md  presentation.md  report_delivery.md  roadmap.md  route_group.md  route_identity_review.md  service_days.md  trip_matching.md  w3_2_directions.md  web.md
docs/ops/: costs.md  domain.md  w3_0_delivery.md  w3_2a_versioning.md  w3_2b_login.md  w3_2c_feedback_terms.md
docs/perf/: M5_timings.md  M8_matching_timings.md  P2_html_memory.md  P2_rules_hotspots.md  P2_tripdelta_dt.md  diff0_hashed.md  kanuma_fare_bulk.md  tripdelta_memo.md
docs/spec/: detection.md
docs/verification/: M10_day_types.md  M2_identity.md  M3_events.md  M4_report.md  M5_residual.md  M6_route_group_survey.md  M7_route_group.md  M8_trip_matching.md  M9_route_identity.md  SD1_day_types.md  SD2_window_scope.md  SD3_special_dates.md  SD4_calendar_view.md  V1_pattern_survey.md  V2_1_direction_groups.md  V2_presentation_model.md  V3_generality_review.md  V3_viewer.md  (+5 more)
infra/: app.py  cdk.json  requirements.txt
scripts/: analyze_route_group_survey.py  build_brand.sh  build_gallery.py  build_viewer.sh  fetch_intl_feeds.py  probe_intl_feeds.py  publish.py  survey_diff_patterns.py  survey_direction_groups.py  survey_route_groups.py  survey_route_identity.py  survey_trip_identity.py
tests/: conftest.py  test_accounting.py  test_bundle.py  test_day_types.py  test_diff0.py  test_generations.py  test_identity.py  test_loader.py  test_model.py  test_pipeline.py  test_presentation.py  test_report.py  test_repository.py  test_route_group.py  test_rules.py  test_rules_m5.py  test_tripdelta.py  test_web_users.py  test_web_versioning.py  test_windows.py
viewer/: index.html  package-lock.json  package.json  vite.config.js
web/: admin.html  index.html  terms.html
(+105 files in other folders)
