[project]
name = "gtfs-semantic-diff"
version = "2026.7.24.3"
description = "Semantic diff extraction for multi-generation GTFS feeds"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "click>=8.0",
    "requests>=2.28",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff", "mypy"]

[project.scripts]
gtfs-semantic-diff = "gtfs_semantic_diff.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gtfs_semantic_diff"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
